--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@ layout: default
 	  </div>
 </div>	   
 
-<table><tr></tr></table>
-<table><tr></tr></table>
+<table hegiht="50"><td hegiht="50"></td></table>
+<table hegiht="50"><td hegiht="50"></td></table>
+<table hegiht="50"><td hegiht="50"></td></table>
 	  
 	   
 <div class="content anchor" id="bio">     
@@ -56,8 +57,8 @@ layout: default
 	<h3>Publication</h3>
 	<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
-     	 <td width="180">
-		<p align="center" style="margin-top:2mm; margin-right:0.5mm; margin-bottom:0; margin-left:0;" class=""><img src="./images/acl2018.png" width="180"  border="0"></p>
+     	 <td width="160">
+		<p align="center" style="margin-top:2mm; margin-right:1mm; margin-bottom:0; margin-left:0;" class=""><img src="./images/acl2018.png" width="160"  border="0"></p>
         </td>
 		<td  valign="middle">
 		<p><span style="font-weight: bold;">[1] HotFlip: White-Box Adversarial Examples for NLP</span> <br>
@@ -72,8 +73,8 @@ layout: default
 	
 	<table bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">       
-	 <td width="180">
-		<p align="center" style="margin-top:3mm; margin-right:0.5mm; margin-bottom:0; margin-left:0;" class=""><img src="./images/iros2018.png" width="180"  border="0"></p>
+	 <td width="160">
+		<p align="center" style="margin-top:5mm; margin-right:1mm; margin-bottom:0; margin-left:0;" class=""><img src="./images/iros2018.png" width="160"  border="0"></p>
         </td >
 		<td  valign="middle">
 	<p><span style="font-weight: bold;">[2] SDFMap: A Real-time 3D Mapping Framework for LiDAR Point Cloud</span> <br>
@@ -88,8 +89,8 @@ layout: default
 	</table>
 		<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
-        	 <td width="180">
-		<p align="center" style="margin-top:1mm; margin-right:0.5mm; margin-bottom:0; margin-left:0;" class=""><img src="./images/summer2017.png" width="180"  border="0"></p>
+        	 <td width="160">
+		<p align="center" style="margin-top:1mm; margin-right:1mm; margin-bottom:0; margin-left:0;" class=""><img src="./images/summer2017.png" width="160"  border="0"></p>
         </td>
 		<td  valign="middle">
 		<p><span style="font-weight: bold;">[3] Automatic Music Accompaniment </span> <br>
@@ -115,7 +116,7 @@ layout: default
 	<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
         <td width="90" >
-		<p align="center" style="margin-top:7mm; margin-right:0.5mm; margin-bottom:0; margin-left:0;" class=""><a href="http://aimlab.cs.uoregon.edu" target="_blank"><img src="./images/aim.jpg" width="90" border="0"></a></p>
+		<p align="center" style="margin-top:7mm; margin-right:2mm; margin-bottom:0; margin-left:0;" class=""><a href="http://aimlab.cs.uoregon.edu" target="_blank"><img src="./images/aim.jpg" width="90" border="0"></a></p>
         </td>
 		<td  valign="middle" >
 		<p style="margin-top:0; margin-right:0; margin-bottom:2mm;"><span style="font-weight: bold;">Robust Training with Word-level Adversity for NLP</span> <br>
@@ -133,7 +134,7 @@ layout: default
 	<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
         <td width="90" >
-		<p align="center" style="margin-top:6mm; margin-right:0.5mm; margin-bottom:0; margin-left:0;" class=""><a href="http://www.cs.hku.hk/" target="_blank"><img src="./images/hku.jpg" width="90" border="0"></a></p>
+		<p align="center" style="margin-top:7.5mm; margin-right:2mm; margin-bottom:0; margin-left:0;" class=""><a href="http://www.cs.hku.hk/" target="_blank"><img src="./images/hku.jpg" width="90" border="0"></a></p>
         </td>
 		<td  valign="middle" >
 		<p style="margin-top:0; margin-right:0; margin-bottom:2mm;"><span style="font-weight: bold;">Automatic Music Accompaniment Using Probabilistic Machine Learning</span> <br>
@@ -152,7 +153,7 @@ layout: default
 	<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
         <td width="90" >
-		<p align="center" style="margin-top:6mm; margin-right:0.5mm; margin-bottom:0; margin-left:0;" class=""><a href="http://lamda.nju.edu.cn" target="_blank"><img src="./images/lamda.jpg" width="90" border="0"></a></p>
+		<p align="center" style="margin-top:6mm; margin-right:2mm; margin-bottom:0; margin-left:0;" class=""><a href="http://lamda.nju.edu.cn" target="_blank"><img src="./images/lamda.jpg" width="90" border="0"></a></p>
         </td>
 		<td  valign="middle" >
 		<p style="margin-top:0; margin-right:0; margin-bottom:2mm;"><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition</span> <br>
@@ -170,7 +171,7 @@ layout: default
 	<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
         <td width="90" >
-		<p align="center" style="margin-top:7mm; margin-right:0.5mm; margin-bottom:0; margin-left:0;" class=""><a href="https://www.nju.edu.cn/EN/" target="_blank"><img src="./images/nju.jpg" width="90" border="0"></a></p>
+		<p align="center" style="margin-top:7mm; margin-right:2mm; margin-bottom:0; margin-left:0;" class=""><a href="https://www.nju.edu.cn/EN/" target="_blank"><img src="./images/nju.jpg" width="90" border="0"></a></p>
         </td>
 		<td  valign="middle" >
 		<p style="margin-top:0; margin-right:0; margin-bottom:2mm;"><span style="font-weight: bold;">Real-time 3D Surface Reconstruction Using Lidar (Light Detection And Ranging)</span> <br>
