--- a/index.html
+++ b/index.html
@@ -90,11 +90,12 @@ layout: default
 		<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
         	 <td width="160">
-		<p align="center" style="margin-top:1mm; margin-right:1mm; margin-bottom:0; margin-left:0;" class=""><img src="./images/summer2017.png" width="160"  border="0"></p>
+		<p align="center" style="margin-top:3mm; margin-right:1mm; margin-bottom:0; margin-left:0;" class=""><img src="./images/summer2017.png" width="160"  border="0"></p>
         </td>
 		<td  valign="middle">
 		<p><span style="font-weight: bold;">[3] Automatic Music Accompaniment </span> <br>
-	<span style="font-weight: bold;">Anyi Rao</span>, Francis Lau In arXiv:1803.09033, 2018	<br>
+	<span style="font-weight: bold;">Anyi Rao</span>, Francis Lau <br>
+		In arXiv:1803.09033, 2018	<br>
 		<span class="tag"><a href="http://arxiv.org/abs/1803.09033"> [Paper]</a></span>
 		<span class="tag"><a href="https://github.com/AnyiRao/AMAHMM"> [Code]</a></span>
 		<span class="tag"><a href="papers/AMApre.pdf"> [Presentation]</a></span>
