--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ layout: default
 		<p style="margin-top:0; margin-right:0; margin-bottom:2mm;"><span style="font-weight: bold;">Express Bill Handwritten Telephone Number Recognition</span> <br>
 		<span style="font-style: italic;"> Feb.2017-Jul.2017 </span> &nbsp Learning And Mining from DatA Group, Nanjing University <br> 
 		Director: Prof. <a href="https://cs.nju.edu.cn/zhouzh/">Zhi-Hua Zhou</a> (ACM, AAAI, AAAS, IEEE Fellow, Academy of Europe Foreign Member) <br> 
-		<li>Incorporated a NLP lexicon-based transcription into a RCNN-CTC network and imporved its performance on standard benchmarks.<br>
+		<li>Incorporated an NLP lexicon-based transcription into an RCNN-CTC network and improved its performance on standard benchmarks.<br>
 		<li>Learned PAC learning theory and implemented VGG16, VGG19, GoogLeNet in Tensorflow, Theano, Caffe framework.<br> 
 		<li>Accomplished 95% accuracy on each digit and 90% accuracy on a series of telephone number.<br>
 		</li>
