--- a/index.html
+++ b/index.html
@@ -214,9 +214,8 @@ layout: default
 			Enforced human-portion constraints to get a minimization problem
 		
 		<p><span style="font-weight: bold;">Convex Optimization</span> Road Car Flow and Its Effect on Roads <br>
-		Learned K-armed bandit, Monte Carlo RL, imitation learning. Constructed three models to depict road circumstances and two models to predict car motion using 
-			Markov Decision Process and OD estimated matrix method. Improved our solutions in terms of traffic load, vehicle type and different kinds of 
-			tollbooths. <span class="tag"><a href="papers/mcm.pdf"> [Paper]</a></span><br>
+		Learned K-armed bandit, Monte Carlo RL; Constructed three models to depict road circumstances and two models to predict car motion using 
+			Markov Decision Process and OD estimated matrix method; Improved the models in terms of traffic load and vehicle type.  <span class="tag"><a href="papers/mcm.pdf"> [Paper]</a></span><br>
 		
 		<p><span style="font-weight: bold;"> Probability and Stochastic Process </span> 
 			Monte Carlo Method for Multidimensional Integrals
