--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ layout: default
           <div class="img"><img class="header-img" src="img/Anyi.jpg" alt="Photo" align="left" height="250" ></div>
           <div class="header-text">
             <h2>Ray Anyi Rao</h2>
-            <p>Undergraduate Student <br>
-            <a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a><br>
-            <a href="http://www.nju.edu.cn/en">Nanjing University</a>, China<br>
+            <p>Graduate Student <br>
+            <a href="http://mmlab.ie.cuhk.edu.hk/">Multimedia Laboratory</a><br>
+            <a href="http://www.cuhk.edu.hk/english">The Chinese University of Hong Kong</a>, China<br>
             Email: anyirao [at] outlook (dot) com<br>
             </p>
 		<div id="contact">	
@@ -37,19 +37,19 @@ layout: default
 <div class="content anchor" id="bio">     
 	<div class="text">
 	<h3>Short Bio</h3>
-		<p> I am a final-year undergrad student from School of Electronic Science and Engineering 
+		<p> Ray Anyi Rao is a Ph.D. student at at Multimedia Laboratory in the Chinese University of Hong Kong. He got the B.S. from School of Electronic Science and Engineering 
 			<a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">
-			Excellent Engineer Honor Class</a>, Nanjing University. I was a research assistant of <a href="http://aimlab.cs.uoregon.edu/">AIM Lab</a>, 
+			Excellent Engineer Honor Class</a>, Nanjing University. He was a research assistant of <a href="http://aimlab.cs.uoregon.edu/">AIM Lab</a>, 
 			a research intern of The University of Hong Kong, and a member of <a href="http://lamda.nju.edu.cn/Pub.ashx">LAMDA</a>  group.
-			I serve as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador.
+			He served as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador.
 	</div>
 </div>   
 	
 	<div class="content anchor" id="academic">     
 	<h3>Academic</h3>
-		<p>My GPA ranks No.1 in each year. All major curricula are above 95 (A+). 
-		My overall GPA is 3.96/4.00. <span style="font-weight: bold;">Rank: 1/183</span>.			
-		<p>I finished my major curricula in 2 years and I learned a bunch of online courses. 
+		<p>His GPA ranks No.1 in each year. All major curricula are above 95 (A+). 
+		His overall GPA is 3.96/4.00. <span style="font-weight: bold;">Rank: 1/183</span>.			
+		<p>He finished my major curricula in 2 years and learned a bunch of online courses. 
 			<a href="http://anyirao.com/more"> [Whole]</a><br>	
 		</p>
 		
