--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@ layout: default
 			<h3>Awards</h3>  
 			<table style="border-spacing:2px" width="100%">
 			<tbody>
+			<tr><td><li> Hong Kong PhD Fellowship </td> <td> 2018 </td></tr>
 			<tr><td><li> National Scholarship awarded by the China Ministry of Education, the highest honor in China </td> <td> 2015 </td></tr>
 			<tr><td><li>Provincial-Level Merit Student awarded by the Jiangsu Provincial Government, the highest honor in Jiangsu Province </td> <td> 2017 </td></tr>
 			<tr><td><li>Nanjing University Top-Grade Scholarship, awarded to 12 students out of all undergraduate students at the university, 
