--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ layout: default
           <div class="img"><img class="header-img" src="img/Anyi.jpg" alt="Photo" align="left" height="250" ></div>
           <div class="header-text">
             <h2>Ray Anyi Rao</h2>
-            <p>Graduate Student <br>
-            <a href="http://mmlab.ie.cuhk.edu.hk/">Multimedia Laboratory</a><br>
-            <a href="http://www.cuhk.edu.hk/english">The Chinese University of Hong Kong</a>, China<br>
+            <p>Ph.D. Student, <a href="http://mmlab.ie.cuhk.edu.hk/">Multimedia Laboratory</a><br>
+            <a href="http://www.cuhk.edu.hk/english">The Chinese University of Hong Kong</a><br>
+	    Hong Kong, China<br>
             Email: anyirao [at] outlook (dot) com<br>
             </p>
 		<div id="contact">	
