--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: default
 <div class="content anchor" id="bio">     
 	<div class="text">
 	<h3>Short Bio</h3>
-		<p> Ray Anyi Rao is a Ph.D. student at at Multimedia Laboratory in the Chinese University of Hong Kong. He got the B.S. from School of Electronic Science and Engineering 
+		<p> Ray Anyi Rao is a Ph.D. student at Multimedia Laboratory in the Chinese University of Hong Kong. He got the B.S. from School of Electronic Science and Engineering 
 			<a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">
 			Excellent Engineer Honor Class</a>, Nanjing University. He was a research assistant of <a href="http://aimlab.cs.uoregon.edu/">AIM Lab</a>, 
 			a research intern of The University of Hong Kong, and a member of <a href="http://lamda.nju.edu.cn/Pub.ashx">LAMDA</a>  group.
