--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@ layout: default
 		<p align="center" style="margin-top:2mm; margin-right:1mm; margin-bottom:0; margin-left:0;" class=""><img src="./images/acl2018.png" width="160"  border="0"></p>
         </td>
 		<td  valign="middle">
-		<p><span style="font-weight: bold;">[1] HotFlip: White-Box Adversarial Examples for NLP</span> <br>
+		<p><span style="font-weight: bold;">[1] HotFlip: White-Box Adversarial Examples for Text Classification</span> <br>
 	Javid Ebrahimi, <span style="font-weight: bold;">Anyi Rao</span>, Daniel Lowd, Dejing Dou <br>
 		In Annual Meeting of the Association for Computational Linguistics 
 		(<span style="font-weight: bold;">ACL</span>), 2018 <br>
-		<span class="tag"><a href="https://arxiv.org/abs/1712.06751"> [Paper]</a></span>
+		<span class="tag"><a href="http://www.aclweb.org/anthology/P18-2006"> [Paper]</a></span>
 		<span class="tag"><a href="https://github.com/AnyiRao/WordAdver"> [Code]</a></span>
 			 </td>
 	</tbody>
