--- a/index.html
+++ b/index.html
@@ -307,6 +307,8 @@ layout: default
 			
 	<div style="text-align:center;">
 	<script type='text/javascript' id='clustrmaps' 
+		src='//cdn.clustrmaps.com/map_v2.js?cl=2e6ba0&w=300&t=n&d=mpfDuVxR4Uc66MMOLgLs6Mn_eNF9IA1DN7YpO5sHMkA&co=ffffff&ct=808080&cmo=a33a3a&cmn=ff5353'></script>	
+	<script type='text/javascript' id='clustrmaps' 
 		src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=280&d=NoxTntTwijcGNPPsm7CM_ctT1E79_SAsBke-aS4Vw4Q&t=tt'></script>	
 	</div>
 </body>
