--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@ layout: default
 			
 	<div style="text-align:center;">
 	<body>
-	<script type="text/javascript" id="clustrmaps" 
-		src="//cdn.clustrmaps.com/map_v2.js?cl=3a68bc&w=300&t=n&d=NoxTntTwijcGNPPsm7CM_ctT1E79_SAsBke-aS4Vw4Q&co=ffffff&ct=3a68bc&cmo=bf3939&cmn=ff5353"></script>
+	<script type='text/javascript' id='clustrmaps' 
+		src='//cdn.clustrmaps.com/map_v2.js?cl=2d78ad&w=a&t=tt&d=NoxTntTwijcGNPPsm7CM_ctT1E79_SAsBke-aS4Vw4Q&co=ffffff&ct=2d78a1&cmo=c14d4d&cmn=ff5353'></script>
 	</body>
 	</div>
 </body>
