--- a/index.html
+++ b/index.html
@@ -306,7 +306,6 @@ layout: default
 	</div>
 			
 	<div style="text-align:center;">
-	<script type='text/javascript' id='clustrmaps' 
-		src='//cdn.clustrmaps.com/map_v2.js?cl=2d78ad&w=a&t=tt&d=NoxTntTwijcGNPPsm7CM_ctT1E79_SAsBke-aS4Vw4Q&co=ffffff&ct=2d78a1&cmo=c14d4d&cmn=ff5353'></script>
+		<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=2d78ad&w=241&t=n&d=NoxTntTwijcGNPPsm7CM_ctT1E79_SAsBke-aS4Vw4Q&co=ffffff&ct=2d78ad&cmo=aa3939&cmn=ff5353'></script>
 	</div>
 </body>
