--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
           <div class="header-text">
             <h2>Ray Anyi Rao</h2>
             <p>Ph.D. Student, <a href="http://mmlab.ie.cuhk.edu.hk/">Multimedia Laboratory</a><br>
-            <a href="http://www.cuhk.edu.hk/english">The Chinese University of Hong Kong</a><br>
+            The Chinese University of Hong Kong<br>
 	    Hong Kong, China<br>
             Email: anyirao [at] outlook (dot) com<br>
             </p>
@@ -38,10 +38,9 @@ layout: default
 	<div class="text">
 	<h3>Short Bio</h3>
 		<p> Ray Anyi Rao is a Ph.D. student at <a href="http://mmlab.ie.cuhk.edu.hk/">Multimedia Laboratory</a> in the Chinese University of Hong Kong. 
-			He got the B.S. from School of Electronic Science and Engineering 
-			<a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">
-			Excellent Engineer Honor Class</a>, Nanjing University in 2018. He was a research assistant of <a href="http://aimlab.cs.uoregon.edu/">AIM Lab</a>, 
-			a research intern of The University of Hong Kong, and a member of <a href="http://lamda.nju.edu.cn/Pub.ashx">LAMDA</a>  group.
+			He got the B.S. from EE Department Excellent Engineer Honor Class, Nanjing University in 2018.  
+			He was a member of <a href="http://lamda.nju.edu.cn/Pub.ashx">LAMDA</a> group, 
+			a research intern of The University of Hong Kong, and a research assistant of <a href="http://aimlab.cs.uoregon.edu/">AIM Lab</a>.
 			He served as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador.
 	</div>
 </div>   
