--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: default
 		<p> Ray Anyi Rao is a Ph.D. student at <a href="http://mmlab.ie.cuhk.edu.hk/">Multimedia Laboratory</a> in the Chinese University of Hong Kong. 
 			He got the B.S. from EE Department Excellent Engineer Honor Class, Nanjing University in 2018.  
 			He was a member of <a href="http://lamda.nju.edu.cn/Pub.ashx">LAMDA</a> group, 
-			a research intern of The University of Hong Kong, and a research assistant of <a href="http://aimlab.cs.uoregon.edu/">AIM Lab</a>.
+			a research intern of The University of Hong Kong, and a research assistant of <a href="http://aimlab.cs.uoregon.edu/publication.php">AIM Lab</a>.
 			He served as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador.
 	</div>
 </div>   
