--- a/index.html
+++ b/index.html
@@ -222,12 +222,6 @@ layout: default
 		<p><span style="font-weight: bold;"> Probability and Stochastic Process </span> 
 			Monte Carlo Method for Multidimensional Integrals
 		<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Report]</a></span>	
-		
-		<p><span style="font-weight: bold;">Python </span> Cluster sky objects
-			<span class="tag"><a href="papers/Cluster.txt"> [Details]</a></span>
-		
-		<p><span style="font-weight: bold;">C++ </span> Tetris Game
-			 <span class="tag"><a href="papers/Tetris_game.txt"> [Details]</a></span>
 			 
 		<p><span style="font-weight: bold;"> Microcomputers and Interface Techniques </span>
 			x86 Assembly Language Programming
@@ -267,7 +261,7 @@ layout: default
 			<tr><td><li> National Scholarship awarded by the China Ministry of Education, the highest honor in China </td> <td> 2015 </td></tr>
 			<tr><td><li>Provincial-Level Merit Student awarded by the Jiangsu Provincial Government, the highest honor in Jiangsu Province </td> <td> 2017 </td></tr>
 			<tr><td><li>Nanjing University Top-Grade Scholarship, awarded to 12 students out of all undergraduate students at the university, 
-				the highest honor in the university <a href="https://www.youtube.com/watch?v=pE3N6VL3UOU"> [Defense]</a></td> <td>2018</td></tr>
+				the highest honor in the university </td> <td>2018</td></tr>
 			<tr><td> <li>SenseTime Scholarship, awarded to 30 students out of all AI major undergraduate students in China</td> <td> 2017 </td></tr>
 			<tr><td> <li>Zhenggang Scholarship, top 40 students in Nanjing University </td> <td> 2016</td></tr>
 			<tr><td><li>Zhenggang Jingying Scholarship </td> <td> 2017 </td></tr>
