--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@ layout: default
 		<li>Employed a new surface lattice data structure in implicit surface update for memory efficiency.<br>
 		<li>Presented a real-time 3D reconstruction pipeline for large-scale Lidar point cloud.<br>		
 		<li>Implemented parallel computation to update the implicit surface faster and Motion Estimation and Mapping to register point cloud.
+		<span class="tag"><a href="papers/iros2018.pdf"> [Report]</a></span> 
 		<span class="tag"><a href="https://youtu.be/_6JFl3p75qg"> [Video]</a></span>
-		<span class="tag"><a href="papers/icra2018pre.pdf"> [Presentation]</a></span> 
 		<span class="tag"><a href="http://anyirao.com/tsdf/outdoor.html"> [Demo]</a></span>
 			</li>	
 		</p>
