--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ layout: default
 	<div class="text">
 	<h3>Short Bio</h3>
 		<p> Ray Anyi Rao is a first-year Ph.D. student at <a href="http://mmlab.ie.cuhk.edu.hk/">Multimedia Laboratory</a> in the Chinese University of Hong Kong, 
-			supervised by <a href="http://dahua.me/">Dahua Lin</a> and <a href="http://bzhou.ie.cuhk.edu.hk/">Bolei Zhou</a>.
-			He got the B.S. from EE Department Excellent Engineer Honor Class, Nanjing University in 2018.  
+			advised by <a href="http://dahua.me/">Dahua Lin</a> and <a href="http://bzhou.ie.cuhk.edu.hk/">Bolei Zhou</a>.
+			He got the B.S. from EE Department Honor Class, Nanjing University in 2018.  
 			He was a member of <a href="http://lamda.nju.edu.cn/Pub.ashx">LAMDA</a> group, 
 			a research intern of The University of Hong Kong, and a research assistant of <a href="http://aimlab.cs.uoregon.edu/publication.php">AIM Lab</a>.
 			He served as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador.
