--- a/index.html
+++ b/index.html
@@ -260,8 +260,7 @@ layout: default
         <h3>Skills</h3> 
 		<p>
 		Programming: Advanced Python, C/C++, MATLAB   &nbsp Intermediate HTML, CSS, Assembly, Altium <br>
-		Research Platforms and Libraries: TensorFlow, Theano, ROS, OpenCV, Caffe, Weka, liblinear, libSVM, Word2Vec, VLFeat, CVX,
-			SPAMS, OpenGL, WebGL, Git<br>
+		Research Platforms and Libraries: PyTorch, TensorFlow, Theano, ROS, OpenCV, Caffe, Weka, liblinear, libSVM, OpenGL, WebGL<br>
 		Operating Systems: Linux, Windows, macOS<br>
 		Language: Full proficiency English, A bit of Japanese and Cantonese, Native Mandarin
 		</p>
