--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ layout: default
 	
 	<div class="content anchor" id="academic">     
 	<h3>Academic</h3>
-		<p>His GPA ranks No.1 in each year. All major curricula are above 95 (A+). 
-		His overall GPA is 3.96/4.00. <span style="font-weight: bold;">Rank: 1/183</span>.			
-		<p>He finished my major curricula in 2 years and learned a bunch of online courses. 
+		<p>His GPA ranked No.1 in each semester during his undergraduate studies  
+		with overall GPA: 3.96/4.00 and <span style="font-weight: bold;">Rank: 1/183</span>.			
+		<p>He finished major curricula in 2 years and learned a bunch of online courses. 
 			<a href="http://anyirao.com/more"> [Whole]</a><br>	
 		</p>
 		
