--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
             <p>Ph.D. Student, <a href="http://mmlab.ie.cuhk.edu.hk/">Multimedia Laboratory</a><br>
             The Chinese University of Hong Kong<br>
 	    Hong Kong, China<br>
-            Email: anyirao [at] outlook (dot) com<br>
+            Email: anyirao [at] ie.cuhk.edu.hk <br>
             </p>
 		<div id="contact">	
 			<a href="https://scholar.google.com/citations?user=8lKr7j4AAAAJ&hl=en&authuser=1&oi=ao" class="icon">
@@ -41,7 +41,7 @@ layout: default
 			advised by <a href="http://dahua.me/">Dahua Lin</a> and <a href="http://bzhou.ie.cuhk.edu.hk/">Bolei Zhou</a>.
 			He got the B.S. from EE Department Honor Class, Nanjing University in 2018.  
 			He was a member of <a href="http://lamda.nju.edu.cn/Pub.ashx">LAMDA</a> group, 
-			a research intern of The University of Hong Kong, and a research assistant of <a href="http://aimlab.cs.uoregon.edu/publication.php">AIM Lab</a>.
+			a research intern of <a href="https://www.cs.hku.hk/"> HKU CS </a>, and a research assistant of <a href="http://aimlab.cs.uoregon.edu/publication.php">AIM Lab</a>.
 			He served as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador.
 	</div>
 </div>   
