--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@ layout: default
 		<h3>Leadership Experience</h3>
 		<p> <span style="font-weight: bold;"> Co-Founder </span> of a Children Care Volunteer Program  &nbsp &nbsp 
 			<span style="font-style: italic;"> Sep.2015-Dec.2015</span> <br>		
-		Co-founded a psychological consulting program to promote left-behind children, 
-			whose parents left them to seek work in big cities, growth and education.
+		Co-founded a psychological consulting program to promote left-behind children growth and education.
 		Volunteered to teach left-behind children Math and English in 
 			a junior high school located in the remote, underdeveloped Xiushui county.
 		Recognized as a key team leader in the successful Warm One Hundred Campaign, which raised money for
@@ -225,7 +224,7 @@ layout: default
 		<p>  <span style="font-weight: bold;"> Vice President </span> of a Young Volunteers Association at Nanjing University
 		 	&nbsp &nbsp <span style="font-style: italic;"> Jun.2015-Jun.2016</span> <br>
 		Organized and participated in over 100 out-of-school and 20 in-school activities covering over 1000 volunteers.
-		Our assocation received a volunteers association excellence award.
+		Our association received a volunteers association excellence award.
                 </p>		
 	</div> 
 		
