--- a/index.html
+++ b/index.html
@@ -255,14 +255,7 @@ layout: default
 			</table>
 	</div>    
 		
-	<div class="content" >      
-        <h3>Skills</h3> 
-		<p>
-		Programming: Advanced Python, C/C++, MATLAB   &nbsp Intermediate HTML, CSS, Assembly, Altium <br>
-		Research Platforms and Libraries: PyTorch, TensorFlow, Theano, ROS, OpenCV, Caffe, Weka, liblinear, libSVM, OpenGL, WebGL<br>
-		Operating Systems: Linux, Windows, macOS<br>
-		Language: Full proficiency English, A bit of Japanese and Cantonese, Native Mandarin
-		</p>
+	<div class="content" >
 	<h3>Miscellaneous</h3>	
 		<p>Research intern group leader in <span class="tag"><a href=" http://www.cj-elec.com/en/">CHANGJIANG ELEC. TECH.</a>
 			<span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html"> 
@@ -272,7 +265,8 @@ layout: default
 		Vice president of a Young Volunteers Association 
 			<span class="tag"><a href="http://tuanwei.nju.edu.cn/article/6965-2015-12-02-16-41-07">  [Media Report]</a></span> <br>   
 		Bronze medal at Nanjing University 55th Sports Meet 
-			<span class="tag"><a href="http://tuanwei.nju.edu.cn/article/4545-201411030008">  [Media Report]</a></span> 
+			<span class="tag"><a href="http://tuanwei.nju.edu.cn/article/4545-201411030008">  [Media Report]</a></span> <br>
+		Language: A bit of Japanese and Cantonese, Native Mandarin, Full proficiency English
 		</p>
 	</div>
 			
