--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ layout: default
 		In Annual Meeting of the Association for Computational Linguistics 
 		(<span style="font-weight: bold;">ACL</span>), 2018 <br>
 		<span class="tag"><a href="http://www.aclweb.org/anthology/P18-2006"> [Paper]</a></span>
+		<span class="tag"><a href="http://anthology.aclweb.org/attachments/P/P18/P18-2006.Poster.pdf"> [Poster]</a></span>
 		<span class="tag"><a href="https://github.com/AnyiRao/WordAdver"> [Code]</a></span>
 			 </td>
 	</tbody>
