--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ layout: default
 			Enforced human-portion constraints to get a minimization problem
 		
 		<p><span style="font-weight: bold;">Convex Optimization</span> Road Car Flow and Its Effect on Roads <br>
-		Learned K-armed bandit, Monte Carlo RL; Constructed models to depict road circumstances and to predict car motion using 
+		Constructed models to depict road circumstances and to predict car motion using 
 			Markov Decision Process and OD estimated matrix; Improved the models in terms of traffic load and vehicle type.  <span class="tag"><a href="papers/mcm.pdf"> [Paper]</a></span><br>
 		
 		<p><span style="font-weight: bold;"> Probability and Stochastic Process </span> 
