--- a/index.html
+++ b/index.html
@@ -183,31 +183,33 @@ layout: default
 	<div class="content anchor" id="project">  
 	   <h3>Course Projects</h3>
 	   
-
-			
-		<p><span style="font-weight: bold;">Computer Vision </span> 3D Human Poses Estimation from a Single Image
-				<span class="tag"><a href="papers/CV_Report.pdf"> [Presentation]</a></span><br>
-			Used sparse coding to reduce the ambiguities in the 3D pose estimation; 
+		<p><span style="font-weight: bold;">Computer Vision </span> 
+			3D Human Poses Estimation from a Single Image
+			<span class="tag"><a href="papers/CV_Report.pdf"> [Presentation]</a></span><br>
+		Used sparse coding to reduce the ambiguities in the 3D pose estimation; 
 			Enforced human-portion constraints to get a minimization problem
 		
-		<p><span style="font-weight: bold;">Convex Optimization</span> Road Car Flow and Its Effect on Roads <br>
+		<p><span style="font-weight: bold;">Convex Optimization</span> 
+			Road Car Flow and Its Effect on Roads 
+			<span class="tag"><a href="papers/mcm.pdf"> [Paper]</a></span><br>
 		Constructed models to depict road circumstances and to predict car motion using 
-			Markov Decision Process and OD estimated matrix; Improved the models in terms of traffic load and vehicle type.  <span class="tag"><a href="papers/mcm.pdf"> [Paper]</a></span><br>
+			Markov Decision Process and OD estimated matrix; Improved the models in terms of traffic load and vehicle type.  <br>
 		
 		<p><span style="font-weight: bold;"> Probability and Stochastic Process </span> 
 			Monte Carlo Method for Multidimensional Integrals
-		<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Report]</a></span>	
+			<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Report]</a></span>	
 		
-		<p><span style="font-weight: bold;">Machine Learning</span> Construction of a Spam Filtering System <br> 
+		<p><span style="font-weight: bold;">Machine Learning</span> 
+			Construction of a Spam Filtering System 
 
 		<p><span style="font-weight: bold;"> Microcomputers and Interface Techniques </span>
 			x86 Assembly Language Programming
-		<span class="tag"><a href="papers/masm.pdf"> [Report]</a></span>
+			<span class="tag"><a href="papers/masm.pdf"> [Report]</a></span>
 		
-		<p><span style="font-weight: bold;">Signal Processing</span> Single Photon Detector<br>
+		<p><span style="font-weight: bold;">Signal Processing</span> Single Photon Detector
+			<span class="tag"><a href="papers/basic_forum.pdf"> [Paper]</a></span>
+			<span class="tag"><a href="papers/Low_noise_preamplifier.pdf"> [Presentation]</a></span><br>
 		Designed a 64-channel low-noise pre-amplifier using a symmetric structure, reduced noise by 100 times, drew an 8-layers circuit board. 
-		<span class="tag"><a href="papers/basic_forum.pdf"> [Paper]</a></span>
-		<span class="tag"><a href="papers/Low_noise_preamplifier.pdf"> [Presentation]</a></span><br>
 		
 	</div>
 
