--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: default
 <div class="content anchor" id="bio">     
 	<div class="text">
 	<h3>Short Bio</h3>
-		<p> Ray Anyi Rao is a first-year Ph.D. student at <a href="http://mmlab.ie.cuhk.edu.hk/">Multimedia Laboratory</a> in the Chinese University of Hong Kong, 
+		<p> Ray Anyi Rao is a Ph.D. student at <a href="http://mmlab.ie.cuhk.edu.hk/">Multimedia Laboratory</a> in the Chinese University of Hong Kong, 
 			advised by <a href="http://dahua.me/">Dahua Lin</a> and <a href="http://bzhou.ie.cuhk.edu.hk/">Bolei Zhou</a>.
 			He got the B.S. from EE Department Honor Class, Nanjing University in 2018.  
 			He was a member of <a href="http://lamda.nju.edu.cn/Pub.ashx">LAMDA</a> group, 
