--- a/index.html
+++ b/index.html
@@ -59,10 +59,28 @@ layout: default
 	<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
      	 <td width="160">
+		<p align="center" style="margin-top:2mm; margin-right:1mm; margin-bottom:0; margin-left:0;" class=""><img src="./images/cvpr2020.png" width="160"  border="0"></p>
+        </td>
+		<td  valign="middle">
+		<p><span style="font-weight: bold;">[1] </span>A Local-to-Global Approach to Multi-modal Movie Scene Segmentation<br>
+	<span style="font-weight: bold;">Anyi Rao</span>, Linning Xu, Yu Xiong, Guodong Xu, Qingqiu Huang, Bolei Zhou, Dahua Lin
+			<br>
+		In Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition 
+		(<span style="font-weight: bold;">CVPR</span>), 2020 <br>
+		<span class="tag">[Paper]</a></span>
+		<span class="tag">[Webpage]</a></span>
+		<span class="tag">[Code]</a></span>
+			 </td>
+	</tbody>
+	</table>	
+		
+	<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
+    <tbody><tr valign="baseline">
+     	 <td width="160">
 		<p align="center" style="margin-top:2mm; margin-right:1mm; margin-bottom:0; margin-left:0;" class=""><img src="./images/acl2018.png" width="160"  border="0"></p>
         </td>
 		<td  valign="middle">
-		<p><span style="font-weight: bold;">[1] HotFlip: White-Box Adversarial Examples for Text Classification</span> <br>
+		<p><span style="font-weight: bold;">[2] HotFlip: White-Box Adversarial Examples for Text Classification</span> <br>
 	Javid Ebrahimi, <span style="font-weight: bold;">Anyi Rao</span>, Daniel Lowd, Dejing Dou <br>
 		In Annual Meeting of the Association for Computational Linguistics 
 		(<span style="font-weight: bold;">ACL</span>), 2018 <br>
@@ -80,7 +98,7 @@ layout: default
 		<p align="center" style="margin-top:3mm; margin-right:1mm; margin-bottom:0; margin-left:0;" class=""><img src="./images/summer2017.png" width="160"  border="0"></p>
         </td>
 		<td  valign="middle">
-		<p><span style="font-weight: bold;">[2] Automatic Music Accompaniment </span> <br>
+		<p><span style="font-weight: bold;">[3] Automatic Music Accompaniment </span> <br>
 	<span style="font-weight: bold;">Anyi Rao</span>, Francis Lau <br>
 		In arXiv:1803.09033, 2018	<br>
 		<span class="tag"><a href="http://arxiv.org/abs/1803.09033"> [Paper]</a></span>
