--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ layout: default
 		<p align="center" style="margin-top:2mm; margin-right:1mm; margin-bottom:0; margin-left:0;" class=""><img src="./images/cvpr2020.png" width="160"  border="0"></p>
         </td>
 		<td  valign="middle">
-		<p><span style="font-weight: bold;">[1] </span>A Local-to-Global Approach to Multi-modal Movie Scene Segmentation<br>
+		<p><span style="font-weight: bold;">[1] A Local-to-Global Approach to Multi-modal Movie Scene Segmentation </span><br>
 	<span style="font-weight: bold;">Anyi Rao</span>, Linning Xu, Yu Xiong, Guodong Xu, Qingqiu Huang, Bolei Zhou, Dahua Lin
 			<br>
 		In Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition 
