--- a/index.html
+++ b/index.html
@@ -39,20 +39,17 @@ layout: default
 	<h3>Short Bio</h3>
 		<p> Ray Anyi Rao is a Ph.D. student at <a href="http://mmlab.ie.cuhk.edu.hk/">Multimedia Laboratory</a> in the Chinese University of Hong Kong, 
 			advised by <a href="http://dahua.me/">Dahua Lin</a> and <a href="http://bzhou.ie.cuhk.edu.hk/">Bolei Zhou</a>.
-			He got the B.S. from EE Department Honor Class, Nanjing University in 2018.  
+			He got the B.S. from EE Department Honor Class, Nanjing University in 2018, ranking 1/183.
 			He was a member of <a href="http://lamda.nju.edu.cn/Pub.ashx">LAMDA</a> group, 
 			a research intern of <a href="https://www.cs.hku.hk/">HKU CS</a>, and a research assistant of <a href="http://aimlab.cs.uoregon.edu/publication.php">AIM Lab</a>.
 			He served as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador.
 	</div>
 </div>   
 	
-	<div class="content anchor" id="academic">     
-	<h3>Academic</h3>
-		<p>His GPA ranked No.1 in each semester during his undergraduate studies  
-		with overall GPA: 3.96/4.00 and <span style="font-weight: bold;">Rank: 1/183</span>.			
-		<p>He finished major curricula in 2 years and learned a bunch of online courses. 
-			<a href="http://anyirao.com/more"> [Whole]</a><br>	
-		</p>
+	<h3>News</h3>
+	2020-02, one paper accpeted to CVPR 2020! It proposes a new temporal video segmenting method based on a new dataset.
+	It is going to help divide a long video into semantic continuous short videos and outputs a structural representation.
+	And it also provides research opportunites towards story/plot understanding in long videos with a semantic unit.
 		
 	<div class="content anchor" id="publication">     
 	<h3>Publication</h3>
@@ -196,7 +193,13 @@ layout: default
 	</div>
 		
 
-		
+	<div class="content anchor" id="academic">     
+	<h3>Academic</h3>
+		<p>His GPA ranked No.1 in each semester during his undergraduate studies  
+		with overall GPA: 3.96/4.00 and <span style="font-weight: bold;">Rank: 1/183</span>.			
+		<p>He finished major curricula in 2 years and learned a bunch of online courses. 
+			<a href="http://anyirao.com/more"> [Whole]</a><br>	
+		</p>
 	
 	<div class="content anchor" id="project">  
 	   <h3>Course Projects</h3>
