--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@ layout: default
 </div>   
 	
 	<h3>News</h3>
-	2020-02, one paper accpeted to CVPR 2020! It proposes a new temporal video segmenting method based on a new dataset.
+	<li>
+	2020-02: One paper accpeted to CVPR 2020! It proposes a new temporal video segmenting method based on a new dataset.
 	It is going to help divide a long video into semantic continuous short videos and outputs a structural representation.
-	And it also provides research opportunites towards story/plot understanding in long videos with a semantic unit.
-		
+	And it also provides research opportunites towards story/plot understanding in long videos with a semantic unit.<br>
+	</li>		
+	
 	<div class="content anchor" id="publication">     
 	<h3>Publication</h3>
 	<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
