--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@ layout: default
 	</div>
 </div>   
 	
+	<div class="content anchor" id="news">  	      
 	<h3>News</h3>
-	<li>
-	2020-02: One paper accpeted to CVPR 2020! It proposes a new temporal video segmenting method based on a new dataset.
-	It is going to help divide a long video into semantic continuous short videos and outputs a structural representation.
-	And it also provides research opportunites towards story/plot understanding in long videos with a semantic unit.<br>
+	<li> 2020-02: One paper is accpeted to CVPR 2020! It proposes a new temporal video segmenting method based on a new dataset.
+	It is going to help divide a long video into semantic continuous short videos and output a structural representation.
+	And it also provides research opportunities towards story/plot understanding in long videos with a semantic unit.<br>
 	</li>		
+	</div>   
 	
 	<div class="content anchor" id="publication">     
 	<h3>Publication</h3>
