--- a/index.html
+++ b/index.html
@@ -46,15 +46,17 @@ layout: default
 	</div>
 </div>   
 	
-	<div class="content anchor" id="news">  	      
+<div class="content anchor" id="news">  
+	<div class="text">
 	<h3>News</h3>
 	<li> 2020-02: One paper is accpeted to CVPR 2020! It proposes a new temporal video segmenting method based on a new dataset.
 	It is going to help divide a long video into semantic continuous short videos and output a structural representation.
 	And it also provides research opportunities towards story/plot understanding in long videos with a semantic unit.<br>
 	</li>		
 	</div>   
+</div>   
 	
-	<div class="content anchor" id="publication">     
+<div class="content anchor" id="publication">     
 	<h3>Publication</h3>
 	<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
     <tbody><tr valign="baseline">
@@ -111,7 +113,7 @@ layout: default
 		
 
 		
-	<div class="content anchor" id="research">  	      
+<div class="content anchor" id="research">  	      
 	<h3>Research Experience</h3>		
 	
 	<table  bordercolor="white" bordercolordark="white" bordercolorlight="white" cellpadding="0" cellspacing="0" height="45" bgcolor="white">
